📦 NEW: 1) Added GraphQL query data to footer 2) Added onCreateNodefor MD files 3) Added createPages Node gatsby API's 4) Added dynamic blog page 5) Added Slug to blog page 6) created Template for blog 7) Injected html in div for blog template

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,20 +1,22 @@
 .header {
-    padding: 1rem  0 3rem;
+  padding: 1rem 0 3rem;
+  a {
+    text-decoration: none;
+  }
 }
 
 .title {
-    color: #000000;
-    font-size: 3rem;
-    
+  color: #000000;
+  font-size: 3rem;
 }
 
 .link {
-    color: yellowgreen;
+  color: yellowgreen;
 }
-.link:hover{
-    color: #999999;
+.link:hover {
+  color: #999999;
 }
 
-.link::after{
-    background: #444444;
+.link::after {
+  background: #444444;
 }
